[project]
name = "coinrailz-mcp"
version = "1.0.4"
description = "MCP server exposing 38 Coin Railz x402 micropayment crypto services to Claude including stock & forex sentiment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Coin Railz", email = "support@coinrailz.com"}
]
keywords = [
    "mcp",
    "claude",
    "anthropic",
    "crypto",
    "blockchain",
    "x402",
    "payments",
    "defi",
    "trading",
    "ethereum",
    "base",
    "usdc"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://coinrailz.com"
Documentation = "https://coinrailz.com/developers"
Repository = "https://github.com/coinrailz/mcp-server-coinrailz"
Issues = "https://github.com/coinrailz/mcp-server-coinrailz/issues"
Changelog = "https://github.com/coinrailz/mcp-server-coinrailz/releases"

[project.scripts]
coinrailz-mcp = "coinrailz_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/coinrailz_mcp",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["coinrailz_mcp"]
